--- a/frontend/components/common/toast.html
+++ b/frontend/components/common/toast.html
@@ -5,10 +5,10 @@
   }
 </script>
 
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+<div class="toast" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 0; right: 0;">
   <div class="toast-header">
     <div style="display: flex; justify-content: space-between; width: 100%">
-      <strong class="mr-auto">Error</strong>
+      <strong class="mr-auto" style="color: red;">Error</strong>
       <small class="text-muted"></small>
       <button
         type="button"
