--- a/frontend/components/common/navbar.html
+++ b/frontend/components/common/navbar.html
@@ -1,3 +1,6 @@
+<!-- Nav Bar Component-->
+<!-- Author: Evan Larkin-->
+<!-- Date: Jan 2021-->
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">ACE</a>
