--- a/frontend/components/patternRecognition/actionSelector.html
+++ b/frontend/components/patternRecognition/actionSelector.html
@@ -1,3 +1,7 @@
+<!-- Action Selector Component-->
+<!-- Author: Evan Larkin-->
+<!-- Date: February 2021-->
+<!-- Usage Notes: Pulls actions from the list images-->
 <style>
   .action-list-item {
     display: flex;
