--- a/frontend/components/patternRecognition/collectionSettings.html
+++ b/frontend/components/patternRecognition/collectionSettings.html
@@ -1,3 +1,6 @@
+<!-- Collection Settings Component-->
+<!-- Author: Evan Larkin-->
+<!-- Date: March 2021-->
 <style>
   .settingsContainer {
     display: flex;
