--- a/frontend/components/patternRecognition/promptView.html
+++ b/frontend/components/patternRecognition/promptView.html
@@ -1,3 +1,7 @@
+<!-- Prompt View Component-->
+<!-- Author: Evan Larkin-->
+<!-- Date: March 2021-->
+<!-- Notes: onclick handlers are defined in top level page. Requires access to browser window-->
 <div class="promptViewContainer">
   <button style="width: 50%; margin-bottom: 5px" onclick="onOpenPrompt()">
     Open</button
