--- a/frontend/components/quickCollect/featureSelector.html
+++ b/frontend/components/quickCollect/featureSelector.html
@@ -1,5 +1,9 @@
+<!-- Feature Selection-->
+<!-- Author: Evan Larkin-->
+<!-- Date: March 2021-->
 <script type="text/javascript">
   $(function () {
+    // Populate drop down with the features defined in javascript/features
     setTimeout(() => {
       features.forEach((feature, index) => {
         $("#feature-select").append(
