--- a/frontend/components/common/toast.html
+++ b/frontend/components/common/toast.html
@@ -1,3 +1,7 @@
+<!-- Toast Component-->
+<!-- Author: Evan Larkin-->
+<!-- Date: February 2021-->
+<!-- Usage Notes: Loaded into each page, used for error messages-->
 <script type="text/javascript">
   function showToast(text) {
     $("#toast-text").html(text);
@@ -5,10 +9,16 @@
   }
 </script>
 
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 0; right: 0;">
+<div
+  class="toast"
+  role="alert"
+  aria-live="assertive"
+  aria-atomic="true"
+  style="position: absolute; top: 0; right: 0"
+>
   <div class="toast-header">
     <div style="display: flex; justify-content: space-between; width: 100%">
-      <strong class="mr-auto" style="color: red;">Error</strong>
+      <strong class="mr-auto" style="color: red">Error</strong>
       <small class="text-muted"></small>
       <button
         type="button"
