--- a/frontend/components/patternRecognition/livePlot.html
+++ b/frontend/components/patternRecognition/livePlot.html
@@ -1,15 +1,30 @@
+<!-- Live Plot Component-->
+<!-- Author: Evan Larkin-->
+<!-- Date: March 2021-->
 <script type="text/javascript">
+  //Initialization
   var currentTrial = 0,
     currentAction = 0,
     currentRep = 0,
     i = 0;
+
+  // The number of data points on the plot at a time
+  const PLOT_POINTS = 1000;
+  // Data that will be displayed on the plots 8 x PLOT_POINTS
   var chartdata = [[], [], [], [], [], [], [], []];
+  // Data from the collection 8 x N
   var actiondata = [[], [], [], [], [], [], [], []];
+  // Labels required for the plot (x-axis). Equal to the data point number of the recording.
   var labels = [];
+  // Data that will be used to calculate the feature. Reset every interval
   var featuredata = [];
+  // Time (ms) between data fetches and plot update
   var FRAME_SIZE = 100;
-  var FRAME_SIZE_LIVE = 1;
-  ctx = document.getElementById("liveChart");
+
+  /* 
+    Set the image that overlays the charts
+    Args: imagePath(string) => path of the image in images/actions/
+  */
   function setActionImage(imagePath) {
     $(`#actionImagePlot`).attr("style", "display:block");
     $("#actionImagePlot").attr(
@@ -17,13 +32,22 @@
       `../../frontend/images/actions/${imagePath}`
     );
   }
+  /* 
+    Remove the image that overlays the charts
+  */
   function hideActionImage() {
     $(`#actionImagePlot`).attr("style", "display:none");
   }
+  /* 
+    Is the configuration for collection valid?
+    Throws exception that when caught, will show toast with error message.
+  */
   function validCollection() {
     if (collectionConfig.actions.length <= 0) throw "No Actions Selected";
     if ($("#input-select").val() == "Input") throw "No Input";
   }
+
+  // Configuration of the chart (ChartJS: https://www.chartjs.org/)
   var chartConfig = {
     type: "line",
     data: {
@@ -34,58 +58,60 @@
           pointRadius: 0,
           borderWidth: 1,
           borderColor: "black",
-          fill: false
-        }
-      ]
+          fill: false,
+        },
+      ],
     },
     options: {
       animation: {
-        duration: 0 // general animation time
+        duration: 0, // general animation time
       },
       elements: {
         line: {
-          tension: 0 // disables bezier curves
-        }
+          tension: 0, // disables bezier curves
+        },
       },
       hover: {
-        animationDuration: 0 // duration of animations when hovering an item
+        animationDuration: 0, // duration of animations when hovering an item
       },
       legend: {
-        display: false
+        display: false,
       },
       tooltip: {
-        enabled: false
+        enabled: false,
       },
       layout: {
         padding: {
           left: 0,
           right: 10,
           top: 15,
-          bottom: 0
-        }
+          bottom: 0,
+        },
       },
       responsiveAnimationDuration: 0, // animation duration after a resize
       scales: {
         xAxes: [
           {
-            display: false
-          }
+            display: false,
+          },
         ],
         yAxes: [
           {
             display: true,
             scaleLabel: {
-              display: true
+              display: true,
             },
             ticks: {
               suggestedMin: -0.08,
-              suggestedMax: 0.08
-            }
-          }
-        ]
-      }
-    }
+              suggestedMax: 0.08,
+            },
+          },
+        ],
+      },
+    },
   };
+
+  // Apply charts to all the HTML below
   ctx1 = document.getElementById("liveChart1");
   ctx2 = document.getElementById("liveChart2");
   ctx3 = document.getElementById("liveChart3");
@@ -102,32 +128,47 @@
   var myLineChart6 = new Chart(ctx6, chartConfig);
   var myLineChart7 = new Chart(ctx7, chartConfig);
   var myLineChart8 = new Chart(ctx8, chartConfig);
-  // Hide other plots unless selected
+  // Hide plots 2-8 until selected by user
   for (var z = 2; z <= 8; z++)
     $(`#plotChannel${z}`).attr("style", "display:none");
 
+  /* 
+    On data collection start
+    Args: collect (boolean)=> Should we be collecting(saving) the data?
+  */
   function onStart(collect) {
+    // Which channels are active (selected by the user)
     let channels = 0;
     let channelsActive = new Array(8).fill(false);
-    $('[id^="qc-channel-"]').each(function(i, el) {
+    $('[id^="qc-channel-"]').each(function (i, el) {
       if ($(this).attr("active") == "true") {
         channels++;
         channelsActive[i] = true;
       }
     });
 
-    // This function is an accurate interval function
+    // Determine the reader selected
+    let reader = $("#daq-select").val();
+    if ($("#input-type-daq").is(":checked")) reader = $("#daq-select").val();
+    if ($("#input-type-file").is(":checked")) reader = "file";
+
+    /* 
+      This function is an accurate interval function, accounting for drift
+      Args: workFunc(function): a function that is called on every interval
+            interval(int): interval time (ms)
+            errorFunc(function): called when an error occurs during execution
+    */
     function AdjustingInterval(workFunc, interval, errorFunc) {
       var that = this;
       var expected, timeout;
       this.interval = interval;
 
-      this.start = function() {
+      this.start = function () {
         expected = Date.now() + this.interval;
         timeout = setTimeout(step, this.interval);
       };
 
-      this.stop = function() {
+      this.stop = function () {
         clearTimeout(timeout);
       };
 
@@ -142,21 +183,23 @@
         timeout = setTimeout(step, Math.max(0, that.interval - drift));
       }
     }
-    let reader = $("#daq-select").val();
-    if ($("#input-type-daq").is(":checked")) reader = $("#daq-select").val();
-    if ($("#input-type-file").is(":checked")) reader = "file";
+
     var ticker = null;
-    $("#stopBtn").click(function() {
+
+    // On collection stop
+    $("#stopBtn").click(function () {
       if (ticker != null) {
         fetch(`http://127.0.0.1:5000/stop/${reader}`)
-          .then(response => response.json)
-          .then(result => {
+          .then((response) => response.json)
+          .then((result) => {
             if (!result) showToast("Error stopping reader");
           });
         ticker.stop();
-        hideActionImage()
+        hideActionImage();
       }
     });
+
+    // Do work initialization
     var currentIteration = 0,
       frame = 0;
     const featureFrame = ($("#time-step").val() * 1000) / FRAME_SIZE;
@@ -169,9 +212,15 @@
     var done = false,
       collectionComplete = false;
     let start = Date.now();
+    /* 
+      This function is passed to the interval function, ran every x ms
+      Args: trial(int): current trial of collection
+            action(int): current action of trial
+            rep(int): current rep of action
+    */
     function doWork(trial, action, rep) {
       if (!done) {
-        // Is In delay
+        // If we are in delay between reps/actions, update the prompts
         if (Date.now() - start < countdownTimerms) {
           const progressToStart =
             ((Date.now() - start) / countdownTimerms) * 100;
@@ -181,12 +230,13 @@
               text: "Waiting",
               progress: {
                 progress: parseInt(progressToStart),
-                text: `Starting in ${parseInt(untilStart) + 1}`
+                text: `Starting in ${parseInt(untilStart) + 1}`,
               },
-              image: collectionConfig.actions[action].key
+              image: collectionConfig.actions[action].key,
             });
-            setActionImage(collectionConfig.actions[action].key)
+          setActionImage(collectionConfig.actions[action].key);
         } else {
+          // If we have collected data for the appropriate amount of time, save it and stop
           if (currentIteration == iterationLength) {
             done = true;
             if (collect) appdata.trials[trial][action].reps.push(actiondata);
@@ -194,6 +244,7 @@
             actiondata = [[], [], [], [], [], [], [], []];
             ticker.stop();
           }
+          // Update the prompt
           const untilEnd =
             ((Date.now() - (start + countdownTimerms)) / durationms) * 100;
           if (promptWindow)
@@ -201,41 +252,43 @@
               text: "Recording",
               progress: {
                 progress: parseInt(untilEnd),
-                text: `Recording`
-              }
+                text: `Recording`,
+              },
             });
 
+          // Fetch more data
           fetch(`http://127.0.0.1:5000/read/${reader}`)
-            .then(response => response.json())
-            .then(result => {
-              //Feature
+            .then((response) => response.json())
+            .then((result) => {
+              // Time to log the selected feature
               if (frame % featureFrame == 0) {
                 onNewFeatureData(featuredata);
                 featuredata = [];
               }
 
-              //2D array row=channel col=value
+              // Appen the data to the current collection
               for (var j = 0; j <= 7; j++) {
                 actiondata[j] = actiondata[j].concat(result[j]);
               }
 
+              //Format the data for plotting
               try {
                 if (chartdata.length && result[0].length) {
                   for (var n = 0; n < result[0].length; n++) {
                     labels.push(i);
-                    if (labels.length > 1000) {
+                    if (labels.length > PLOT_POINTS) {
                       labels.shift();
                     }
                     channelsActive.map((channelActive, channelInd) => {
                       if (channelActive) {
                         //console.log(data[channelInd].length,channelInd)
-                        if (chartdata[channelInd].length > 1000) {
+                        if (chartdata[channelInd].length > PLOT_POINTS) {
                           chartdata[channelInd].shift();
                         }
 
                         chartdata[channelInd].push({
                           x: i,
-                          y: result[channelInd][n]
+                          y: result[channelInd][n],
                         });
                         featuredata.push(result[channelInd][n]);
                       }
@@ -245,10 +298,8 @@
                 }
               } catch (e) {
                 console.log(e);
-                console.log(result);
-                console.log(data);
               }
-
+              // Update the plot data for all active channels
               if (channelsActive[0]) {
                 myLineChart1.data.datasets[0].data = chartdata[0];
                 myLineChart1.data.labels = labels;
@@ -301,21 +352,22 @@
 
     // START COLLECTION
     try {
+      // Is the collection valid (throws error otherwise)
       validCollection();
-      //Init
+      // Initialize Collection Data
       var repCount = collectionConfig.actions[currentAction].reps;
       var trialCount = collectionConfig.trials;
       if (collect) {
         appdata.trials.push([]);
         appdata.trials[currentTrial].push({
           name: collectionConfig.actions[0].name,
-          reps: []
+          reps: [],
         });
       }
+      // Start the reader to prepare for collection
       fetch(`http://127.0.0.1:5000/start/${reader}`)
-        .then(response => response.json())
-        .then(result => {
-          console.log("start CALL", result);
+        .then((response) => response.json())
+        .then((result) => {
           if (result == false) showToast("Error Starting Reader");
           else {
             ticker = new AdjustingInterval(
@@ -326,6 +378,13 @@
           }
         });
 
+      /*
+        This function manages the collection process, it continues to check if 
+        collection of the rep is complete and updates the prompt.
+        When the rep is complete, it sets the trial/action/rep according to the congifuration, and 
+        re-starts collection of the appropriate rep.
+        When the total collection is complete, it updates the prompt stops collection
+      */
       function checkFlag() {
         if (done == false) {
           setTimeout(checkFlag, FRAME_SIZE);
@@ -349,7 +408,7 @@
                   appdata.trials.push([]);
                   appdata.trials[currentTrial].push({
                     name: collectionConfig.actions[0].name,
-                    reps: []
+                    reps: [],
                   });
                 }
                 repCount = collectionConfig.actions[0].reps;
@@ -358,7 +417,7 @@
               if (collect)
                 appdata.trials[currentTrial].push({
                   name: collectionConfig.actions[currentAction].name,
-                  reps: []
+                  reps: [],
                 });
               repCount = collectionConfig.actions[currentAction].reps;
             }
@@ -393,8 +452,8 @@
                 text: "Done",
                 progress: {
                   progress: parseInt(100),
-                  text: `Done`
-                }
+                  text: `Done`,
+                },
               });
             }
           }
@@ -406,10 +465,13 @@
     }
   }
 </script>
-<!--end polot-->
 
-<div style="position: relative;">
-  <img id="actionImagePlot" src="../../frontend/images/actions/key_grip.jpg" style="display: none;" />
+<div style="position: relative">
+  <img
+    id="actionImagePlot"
+    src="../../frontend/images/actions/key_grip.jpg"
+    style="display: none"
+  />
   <div id="plotChannel1">
     <h6>Channel 1</h6>
     <canvas id="liveChart1"></canvas>
