--- a/frontend/components/patternRecognition/livePlot.html
+++ b/frontend/components/patternRecognition/livePlot.html
@@ -54,10 +54,59 @@
       labels: new Array(500).fill(0),
       datasets: [
         {
-          data: chartdata,
+          data: [],
           pointRadius: 0,
           borderWidth: 1,
           borderColor: "black",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "red",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "blue",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "orange",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "purple",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "cyan",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "green",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "pink",
           fill: false,
         },
       ],
@@ -113,24 +162,7 @@
 
   // Apply charts to all the HTML below
   ctx1 = document.getElementById("liveChart1");
-  ctx2 = document.getElementById("liveChart2");
-  ctx3 = document.getElementById("liveChart3");
-  ctx4 = document.getElementById("liveChart4");
-  ctx5 = document.getElementById("liveChart5");
-  ctx6 = document.getElementById("liveChart6");
-  ctx7 = document.getElementById("liveChart7");
-  ctx8 = document.getElementById("liveChart8");
   var myLineChart1 = new Chart(ctx1, chartConfig);
-  var myLineChart2 = new Chart(ctx2, chartConfig);
-  var myLineChart3 = new Chart(ctx3, chartConfig);
-  var myLineChart4 = new Chart(ctx4, chartConfig);
-  var myLineChart5 = new Chart(ctx5, chartConfig);
-  var myLineChart6 = new Chart(ctx6, chartConfig);
-  var myLineChart7 = new Chart(ctx7, chartConfig);
-  var myLineChart8 = new Chart(ctx8, chartConfig);
-  // Hide plots 2-8 until selected by user
-  for (var z = 2; z <= 8; z++)
-    $(`#plotChannel${z}`).attr("style", "display:none");
 
   /* 
     On data collection start
@@ -140,12 +172,6 @@
     // Which channels are active (selected by the user)
     let channels = 0;
     let channelsActive = new Array(8).fill(false);
-    $('[id^="qc-channel-"]').each(function (i, el) {
-      if ($(this).attr("active") == "true") {
-        channels++;
-        channelsActive[i] = true;
-      }
-    });
 
     // Determine the reader selected
     let reader = $("#daq-select").val();
@@ -260,6 +286,18 @@
           fetch(`http://127.0.0.1:5000/read/${reader}`)
             .then((response) => response.json())
             .then((result) => {
+              // Check the channel selection
+              $('[id^="qc-channel-"]').each(function (i, el) {
+                if ($(this).attr("active") == "true") {
+                  channels++;
+                  channelsActive[i] = true;
+                  myLineChart1.data.datasets[i].hidden = false;
+                } else {
+                  channelsActive[i] = false;
+                  myLineChart1.data.datasets[i].hidden = true;
+                }
+              });
+
               // Time to log the selected feature
               if (frame % featureFrame == 0) {
                 onNewFeatureData(featuredata);
@@ -288,7 +326,7 @@
 
                         chartdata[channelInd].push({
                           x: i,
-                          y: result[channelInd][n],
+                          y: result[channelInd][n] + 2 * channelInd,
                         });
                         featuredata.push(result[channelInd][n]);
                       }
@@ -300,46 +338,16 @@
                 console.log(e);
               }
               // Update the plot data for all active channels
-              if (channelsActive[0]) {
-                myLineChart1.data.datasets[0].data = chartdata[0];
-                myLineChart1.data.labels = labels;
-                myLineChart1.update();
-              }
-              if (channelsActive[1]) {
-                myLineChart2.data.datasets[0].data = chartdata[1];
-                myLineChart2.data.labels = labels;
-                myLineChart2.update();
-              }
-              if (channelsActive[2]) {
-                myLineChart3.data.datasets[0].data = chartdata[2];
-                myLineChart3.data.labels = labels;
-                myLineChart3.update();
-              }
-              if (channelsActive[3]) {
-                myLineChart4.data.datasets[0].data = chartdata[3];
-                myLineChart4.data.labels = labels;
-                myLineChart4.update();
-              }
-              if (channelsActive[4]) {
-                myLineChart5.data.datasets[0].data = chartdata[4];
-                myLineChart5.data.labels = labels;
-                myLineChart5.update();
-              }
-              if (channelsActive[5]) {
-                myLineChart6.data.datasets[0].data = chartdata[5];
-                myLineChart6.data.labels = labels;
-                myLineChart6.update();
-              }
-              if (channelsActive[6]) {
-                myLineChart7.data.datasets[0].data = chartdata[6];
-                myLineChart7.data.labels = labels;
-                myLineChart7.update();
-              }
-              if (channelsActive[7]) {
-                myLineChart8.data.datasets[0].data = chartdata[7];
-                myLineChart8.data.labels = labels;
-                myLineChart8.update();
-              }
+              myLineChart1.data.datasets[0].data = chartdata[0];
+              myLineChart1.data.datasets[1].data = chartdata[1];
+              myLineChart1.data.datasets[2].data = chartdata[2];
+              myLineChart1.data.datasets[3].data = chartdata[3];
+              myLineChart1.data.datasets[4].data = chartdata[4];
+              myLineChart1.data.datasets[5].data = chartdata[5];
+              myLineChart1.data.datasets[6].data = chartdata[6];
+              myLineChart1.data.datasets[7].data = chartdata[7];
+              myLineChart1.data.labels = labels;
+              myLineChart1.update();
               currentIteration++;
               frame++;
             })
@@ -472,36 +480,6 @@
     src="../../frontend/images/actions/key_grip.jpg"
     style="display: none"
   />
-  <div id="plotChannel1">
-    <h6>Channel 1</h6>
-    <canvas id="liveChart1"></canvas>
-  </div>
-  <div id="plotChannel2">
-    <h6>Channel 2</h6>
-    <canvas id="liveChart2"></canvas>
-  </div>
-  <div id="plotChannel3">
-    <h6>Channel 3</h6>
-    <canvas id="liveChart3"></canvas>
-  </div>
-  <div id="plotChannel4">
-    <h6>Channel 4</h6>
-    <canvas id="liveChart4"></canvas>
-  </div>
-  <div id="plotChannel5">
-    <h6>Channel 5</h6>
-    <canvas id="liveChart5"></canvas>
-  </div>
-  <div id="plotChannel6">
-    <h6>Channel 6</h6>
-    <canvas id="liveChart6"></canvas>
-  </div>
-  <div id="plotChannel7">
-    <h6>Channel 7</h6>
-    <canvas id="liveChart7"></canvas>
-  </div>
-  <div id="plotChannel8">
-    <h6>Channel 8</h6>
-    <canvas id="liveChart8"></canvas>
-  </div>
+
+  <canvas id="liveChart1"></canvas>
 </div>
