--- a/frontend/components/quickCollect/livePlot.html
+++ b/frontend/components/quickCollect/livePlot.html
@@ -2,6 +2,8 @@
 <!-- Author: Evan Larkin-->
 <!-- Date: March 2021-->
 <script type="text/javascript">
+  // The number of data points on the plot at a time
+  const PLOT_POINTS = 1000;
   // Data from the collection 8 x N
   var data = [[], [], [], [], [], [], [], []];
   // Labels required for the plot (x-axis). Equal to the data point number of the recording.
@@ -22,6 +24,55 @@
           pointRadius: 0,
           borderWidth: 1,
           borderColor: "black",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "red",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "blue",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "orange",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "purple",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "cyan",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "green",
+          fill: false,
+        },
+        {
+          data: [],
+          pointRadius: 0,
+          borderWidth: 1,
+          borderColor: "pink",
           fill: false,
         },
       ],
@@ -76,24 +127,7 @@
   };
   // Apply charts to all the HTML below
   ctx1 = document.getElementById("liveChart1");
-  ctx2 = document.getElementById("liveChart2");
-  ctx3 = document.getElementById("liveChart3");
-  ctx4 = document.getElementById("liveChart4");
-  ctx5 = document.getElementById("liveChart5");
-  ctx6 = document.getElementById("liveChart6");
-  ctx7 = document.getElementById("liveChart7");
-  ctx8 = document.getElementById("liveChart8");
   var myLineChart1 = new Chart(ctx1, chartConfig);
-  var myLineChart2 = new Chart(ctx2, chartConfig);
-  var myLineChart3 = new Chart(ctx3, chartConfig);
-  var myLineChart4 = new Chart(ctx4, chartConfig);
-  var myLineChart5 = new Chart(ctx5, chartConfig);
-  var myLineChart6 = new Chart(ctx6, chartConfig);
-  var myLineChart7 = new Chart(ctx7, chartConfig);
-  var myLineChart8 = new Chart(ctx8, chartConfig);
-  // Hide plots 2-8 until selected by user
-  for (var z = 2; z <= 8; z++)
-    $(`#plotChannel${z}`).attr("style", "display:none");
 
   /* 
     On data collection start
@@ -102,12 +136,6 @@
     // Which channels are active (selected by the user)
     let channels = 0;
     let channelsActive = new Array(8).fill(false);
-    $('[id^="qc-channel-"]').each(function (i, el) {
-      if ($(this).attr("active") == "true") {
-        channels++;
-        channelsActive[i] = true;
-      }
-    });
 
     // Determine the reader selected
     let reader = $("#daq-select").val();
@@ -173,6 +201,18 @@
       fetch(`http://127.0.0.1:5000/read/${reader}`)
         .then((response) => response.json())
         .then((result) => {
+          // Check the channel selection
+          $('[id^="qc-channel-"]').each(function (i, el) {
+            if ($(this).attr("active") == "true") {
+              channels++;
+              channelsActive[i] = true;
+              myLineChart1.data.datasets[i].hidden = false;
+            } else {
+              channelsActive[i] = false;
+              myLineChart1.data.datasets[i].hidden = true;
+            }
+          });
+
           // Time to log the selected feature
           if (frame % featureFrame == 0) {
             onNewFeatureData(featuredata);
@@ -184,17 +224,19 @@
             if (data.length && result[0].length) {
               for (var n = 0; n < result[0].length; n++) {
                 labels.push(i);
-                if (labels.length > 1000) {
+                if (labels.length > PLOT_POINTS) {
                   labels.shift();
                 }
                 channelsActive.map((channelActive, channelInd) => {
                   if (channelActive) {
-                    //console.log(data[channelInd].length,channelInd)
-                    if (data[channelInd].length > 1000) {
+                    if (data[channelInd].length > PLOT_POINTS) {
                       data[channelInd].shift();
                     }
 
-                    data[channelInd].push({ x: i, y: result[channelInd][n] });
+                    data[channelInd].push({
+                      x: i,
+                      y: result[channelInd][n] + 2 * channelInd,
+                    });
                     featuredata.push(result[channelInd][n]);
                   }
                 });
@@ -207,47 +249,16 @@
             console.log(data);
           }
 
-          // Update the plot data for all active channels
-          if (channelsActive[0]) {
-            myLineChart1.data.datasets[0].data = data[0];
-            myLineChart1.data.labels = labels;
-            myLineChart1.update();
-          }
-          if (channelsActive[1]) {
-            myLineChart2.data.datasets[0].data = data[1];
-            myLineChart2.data.labels = labels;
-            myLineChart2.update();
-          }
-          if (channelsActive[2]) {
-            myLineChart3.data.datasets[0].data = data[2];
-            myLineChart3.data.labels = labels;
-            myLineChart3.update();
-          }
-          if (channelsActive[3]) {
-            myLineChart4.data.datasets[0].data = data[3];
-            myLineChart4.data.labels = labels;
-            myLineChart4.update();
-          }
-          if (channelsActive[4]) {
-            myLineChart5.data.datasets[0].data = data[4];
-            myLineChart5.data.labels = labels;
-            myLineChart5.update();
-          }
-          if (channelsActive[5]) {
-            myLineChart6.data.datasets[0].data = data[5];
-            myLineChart6.data.labels = labels;
-            myLineChart6.update();
-          }
-          if (channelsActive[6]) {
-            myLineChart7.data.datasets[0].data = data[6];
-            myLineChart7.data.labels = labels;
-            myLineChart7.update();
-          }
-          if (channelsActive[7]) {
-            myLineChart8.data.datasets[0].data = data[7];
-            myLineChart8.data.labels = labels;
-            myLineChart8.update();
-          }
+          myLineChart1.data.datasets[0].data = data[0];
+          myLineChart1.data.datasets[1].data = data[1];
+          myLineChart1.data.datasets[2].data = data[2];
+          myLineChart1.data.datasets[3].data = data[3];
+          myLineChart1.data.datasets[4].data = data[4];
+          myLineChart1.data.datasets[5].data = data[5];
+          myLineChart1.data.datasets[6].data = data[6];
+          myLineChart1.data.datasets[7].data = data[7];
+          myLineChart1.data.labels = labels;
+          myLineChart1.update();
 
           frame++;
         })
@@ -272,37 +283,4 @@
   }
 </script>
 
-<div>
-  <div id="plotChannel1">
-    <h6>Channel 1</h6>
-    <canvas id="liveChart1"></canvas>
-  </div>
-  <div id="plotChannel2">
-    <h6>Channel 2</h6>
-    <canvas id="liveChart2"></canvas>
-  </div>
-  <div id="plotChannel3">
-    <h6>Channel 3</h6>
-    <canvas id="liveChart3"></canvas>
-  </div>
-  <div id="plotChannel4">
-    <h6>Channel 4</h6>
-    <canvas id="liveChart4"></canvas>
-  </div>
-  <div id="plotChannel5">
-    <h6>Channel 5</h6>
-    <canvas id="liveChart5"></canvas>
-  </div>
-  <div id="plotChannel6">
-    <h6>Channel 6</h6>
-    <canvas id="liveChart6"></canvas>
-  </div>
-  <div id="plotChannel7">
-    <h6>Channel 7</h6>
-    <canvas id="liveChart7"></canvas>
-  </div>
-  <div id="plotChannel8">
-    <h6>Channel 8</h6>
-    <canvas id="liveChart8"></canvas>
-  </div>
-</div>
+<canvas id="liveChart1"></canvas>
